--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@babel/runtime": "^7.4.5",
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
+    "jetifier": "^2.0.0",
     "metro-react-native-babel-preset": "^0.54.1",
     "react-test-renderer": "16.8.3",
     "redux-devtools-extension": "^2.13.8"
